# vowifi-cscf

./: README.md
CSCF/: CSCF.sln  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
CSCF/CSCF/: CSCF.cpp  CSCF.vcxproj  CSCF.vcxproj.filters  app.c  app.h  config.c  config.h  cscf.h  define.h  main.c  module.c  module.h  module_cscf_hss_IPC.c  module_log.c  module_log.h  module_proxy.c  module_proxy.h  module_registrar.c  module_registrar.h  module_rtpproxy.c  pj.h  stdafx.cpp  stdafx.h
CSCF/CSCF-linux/: CSCF-linux.vcxproj
CSCF/UDPTest/: UDPTest.vcxproj  main.cpp  threadcontrol.cpp  udpproxy.h
CSCF/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
CSCF/lib/: libbaseclasses-i386-Win32-vc14-Debug.lib  libg7221codec-i386-Win32-vc14-Debug.lib  libgsmcodec-i386-Win32-vc14-Debug.lib  libilbccodec-i386-Win32-vc14-Debug.lib  libmilenage-i386-Win32-vc14-Debug.lib  libresample-i386-Win32-vc14-Debug.lib  libspeex-i386-Win32-vc14-Debug.lib  libsrtp-i386-Win32-vc14-Debug.lib  libwebrtc-i386-Win32-vc14-Debug.lib  libyuv-i386-Win32-vc14-Debug.lib  pjlib-i386-Win32-vc14-Debug.lib  pjlib-util-i386-Win32-vc14-Debug.lib  pjlib-util-x86_64-x64-vc14-Debug.lib  pjlib-x86_64-x64-vc14-Debug.lib  pjmedia-audiodev-i386-Win32-vc14-Debug.lib  pjmedia-audiodev-x86_64-x64-vc14-Debug.lib  pjmedia-codec-i386-Win32-vc14-Debug.lib  pjmedia-codec-x86_64-x64-vc14-Debug.lib  pjmedia-i386-Win32-vc14-Debug.lib  pjmedia-videodev-i386-Win32-vc14-Debug.lib  pjmedia-videodev-x86_64-x64-vc14-Debug.lib  pjmedia-x86_64-x64-vc14-Debug.lib  pjnath-i386-Win32-vc14-Debug.lib  pjnath-x86_64-x64-vc14-Debug.lib  pjsip-core-i386-Win32-vc14-Debug.lib  pjsip-core-x86_64-x64-vc14-Debug.lib  pjsip-simple-i386-Win32-vc14-Debug.lib  pjsip-simple-x86_64-x64-vc14-Debug.lib  pjsip-ua-i386-Win32-vc14-Debug.lib  pjsip-ua-x86_64-x64-vc14-Debug.lib  pjsua-lib-i386-Win32-vc14-Debug.lib  pjsua-lib-x86_64-x64-vc14-Debug.lib
doc/: Vowifi多号码设计方案.docx  项目搭建.docx
