bin_PROGRAMS=cscf
cscf_SOURCES=CSCF/app.c\
			 CSCF/config.c\
			 CSCF/main.c\
			 CSCF/module.c\
			 CSCF/module_cscf_hss_IPC.c\
			 CSCF/module_log.c\
			 CSCF/module_proxy.c\
			 CSCF/module_registrar.c

cscf_LDADD=\
		   lib/libpjsip-x86_64-unknown-linux-gnu.a\
		   lib/libpjsip-ua-x86_64-unknown-linux-gnu.a\
		   lib/libpj-x86_64-unknown-linux-gnu.a\
		   lib/libpjsua-x86_64-unknown-linux-gnu.a\
		   lib/libpjsua2-x86_64-unknown-linux-gnu.a\
		   lib/libpjnath-x86_64-unknown-linux-gnu.a\
		   lib/libpjmedia-audiodev-x86_64-unknown-linux-gnu.a\
		   lib/libpjsdp-x86_64-unknown-linux-gnu.a\
		   lib/libpjmedia-codec-x86_64-unknown-linux-gnu.a\
		   lib/libpjsip-simple-x86_64-unknown-linux-gnu.a\
		   lib/libpjmedia-videodev-x86_64-unknown-linux-gnu.a\
		   lib/libpjmedia-x86_64-unknown-linux-gnu.a\
		   lib/libpjlib-util-x86_64-unknown-linux-gnu.a

